# tree-sitter-objectscript

./: .commitlintrc.js  .eslintrc.js  .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tree-sitter.json
common/: grammar.js
core/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  utils.js
core/bindings/c/: tree-sitter-objectscript_core.pc.in
core/bindings/go/: binding.go  binding_test.go  go.mod
core/bindings/node/: binding.cc
core/bindings/rust/: build.rs  lib.rs
core/queries/: highlights.scm  indents.scm  injections.scm
core/src/: grammar.json  node-types.json  scanner.c  scanner.h
core/test/corpus/: if-statements.txt  set-statement.txt  statements.txt  tags.txt
expr/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
expr/bindings/c/: tree-sitter-objectscript_expr.h  tree-sitter-objectscript_expr.pc.in
expr/bindings/go/: binding.go  binding_test.go  go.mod
expr/bindings/node/: binding.cc
expr/bindings/python/tree_sitter_objectscript_expr/: __init__.py  binding.c
expr/bindings/rust/: build.rs  lib.rs
expr/queries/: highlights.scm
expr/src/: grammar.json  node-types.json  parser.c
expr/test/corpus/: system-functions.txt
udl/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  keywords.js  package.json  pyproject.toml  setup.py
udl/bindings/go/: binding.go  go.mod  (+1 more)
udl/queries/: highlights.scm  indents.scm  injections.scm  tags.scm
udl/src/: grammar.json  node-types.json  scanner.c
(+13 files in other folders)
