[package]
name = "tree-sitter-objectscript"
description = "ObjectScript grammar for tree-sitter"
version = "1.0.0"
keywords = ["incremental", "parsing", "ObjectScript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/intersystems/tree-sitter-objectscript"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
