[package]
name = "tree-sitter-objectscript-expr"
description = "ObjectScript expression grammar for tree-sitter"
version = "1.0.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "objectscript-expr"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/intersystems/tree-sitter-objectscript/expr"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
